# dental_clinic

./: .gitignore  Caddyfile  deploy.dev.md  deploy.prod.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.MD  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20260313_0001_initial_database_baseline.py  20260314_0002_entities_schema.py  20260322_0003_bot_workflow_schema.py  20260323_0004_contact_channel_identities.py  20260330_0005_knowledge_base_tables.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: health.py
apps/api/app/core/: gemini_client.py
apps/api/app/db/models/: __init__.py  entities.py
apps/api/app/modules/appointment_requests/: __init__.py  service.py
apps/api/app/modules/contacts/: __init__.py  api.py  schemas.py  service.py
apps/api/app/modules/conversations/: __init__.py  api.py  service.py
apps/api/app/modules/handoff_tasks/: __init__.py
apps/api/app/modules/inbound_messages/: __init__.py  api.py  constants.py  gemini.py  schemas.py  service.py  telegram_client.py
apps/api/scripts/: clear_db.py  intent_test_cases.py  intent_test_loop.py  intent_validators.py  seed_db.py  set_telegram_webhook.py
apps/api/tests/: conftest.py  test_appointment_requests.py  test_constants.py  test_contact_resolution.py  test_create_contact.py  test_gemini.py  test_knowledge_base.py  test_service_routing.py  test_telegram_adapter.py
docs/: project-documentation.html
(+27 files in other folders)
